@@ -1,3 +1,3 @@
-This directory contains contributed code.  It may carry its own licenses
-not necessarily LGPL used by the main FastBit code.
+This directory contains contributed code.  It may carry its own licenses,
+not necessarily the LGPL license used by the main FastBit code.
 
